try fix mobile menu on safari

--- a/frontend/components/Container/Container.module.css
+++ b/frontend/components/Container/Container.module.css
@@ -2,7 +2,7 @@
     min-width: 335px;
     max-width: 430px;
     width: 100%;
-    padding: 0 20px;
+    padding: env(safe-area-inset-top) 20px env(safe-area-inset-bottom) 20px;
     margin: 0 auto
 }
 
